name:                day19-hs
version:             0.1.0.0
synopsis:            Advent of Code 2016: Day 19 parts 1 and 2 solution
description:         Please see README.md
homepage:            https://github.com/lux01/advent-of-code-2016
license:             MIT
license-file:        LICENSE
author:              William Woodhead
maintainer:          william.woodhead@lux01.co.uk
copyright:           2016 William Woodhead
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day19
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.8 && < 0.6
                     
executable day19-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       day19-hs >= 0.1,
                       containers >= 0.5.8
